# backend-iosif-dev

./: .gitignore  Cargo.toml  README.md
migrations/2023-07-22-133830_create_birds/: up.sql
migrations/2023-07-22-134903_create_bird_sightings/: down.sql  up.sql
src/: controller.rs  database.rs  main.rs
