[package]
name = "backend-iosif-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.174", features = ["derive"] }
diesel = { version = "2.0.0", features = ["mysql", "chrono"] }
uuid = { version = "1.4.1", features = ["v4"] }
dotenvy = "0.15.7"
